--- a/gamma/index.html
+++ b/gamma/index.html
@@ -100,9 +100,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading13">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
-								<h5>Javier de Lucas
+								<h5>TBA
 								<br>
-								TBA &#8213; 22/06/2023, 21:00</h5>
+								Javier de Lucas &#8213; 22/06/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse13" class="accordion-collapse collapse" aria-labelledby="heading13" data-bs-parent="#accordionExample">
@@ -115,9 +115,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading12">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse12" aria-expanded="false" aria-controls="collapse12">
-								<h5>Julia Lange
+								<h5>TBA
 								<br>
-								TBA &#8213; 15/06/2023, 21:00</h5>
+								Julia Lange &#8213; 15/06/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse12" class="accordion-collapse collapse" aria-labelledby="heading12" data-bs-parent="#accordionExample">
@@ -130,9 +130,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading11">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse11" aria-expanded="false" aria-controls="collapse11">
-								<h5>Mikołaj Duch
+								<h5>TBA
 								<br>
-								TBA &#8213; 08/06/2023, 21:00</h5>
+								Mikołaj Duch &#8213; 08/06/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse11" class="accordion-collapse collapse" aria-labelledby="heading11" data-bs-parent="#accordionExample">
@@ -145,9 +145,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading10">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapse10">
-								<h5>Tymon Frelik
+								<h5>Jet bundles and Ehresmann connections
 								<br>
-								Jet bundles and Ehresmann connections &#8213; 01/06/2023, 21:00</h5>
+								Tymon Frelik &#8213; 01/06/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#accordionExample">
@@ -160,9 +160,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading9">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
-								<h5>Bartosz M. Zawora
+								<h5>Basics on Lyapunov stability
 								<br>
-								Basics on Lyapunov stability &#8213; 25/05/2023, 21:00</h5>
+								Bartosz M. Zawora &#8213; 25/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#accordionExample">
@@ -176,9 +176,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading8">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
-								<h5>Daniel Pérez Palau
+								<h5>The space: when three is a crowd
 								<br>
-								The space: when three is a crowd &#8213; 18/05/2023, 21:00</h5>
+								Daniel Pérez Palau &#8213; 18/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
@@ -192,9 +192,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading7">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
-								<h5>Asier López-Gordón
+								<h5>An introduction to integrable systems
 								<br>
-								An introduction to integrable systems &#8213; 11/05/2023, 21:00</h5>
+								Asier López-Gordón &#8213; 11/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
@@ -208,9 +208,9 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading6">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
-								<h5>Jordi Gaset
+								<h5>The geometry of field theories
 								<br>
-								The geometry of field theories &#8213; 04/05/2023, 21:00</h5>
+								Jordi Gaset &#8213; 04/05/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
